--- a/src/app/on-change/on-change.component.html
+++ b/src/app/on-change/on-change.component.html
@@ -1,5 +1,5 @@
 <div class="card">
   <div class="card-body">
-    <p>Message: {{message}}</p>
+    <p #temp>Message: {{message}}</p>
   </div>
 </div>
